added logic and footer  for scissors and papper

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,9 +29,9 @@
 
     <%= yield %>
 
-    <footer>
-    All rigths reserved
-    </footer>
+    <a href="/">
+    Rules
+  </a>
 
   </body>
 </html>
